refactor: fix PR comments
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>